# pylocalvoice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  examples.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
pyhmong/: __init__.py  core.py
pylocalvoice/: __init__.py
pylocalvoice/pyhmong/: api.py  core.py  extended.py
tests/: test_extended.py  test_pyhmong.py
